// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutComponent Snapshot successfully 1`] = `
<ng-component
  __ngContext__={[Function LRootView]}
  title={[Function String]}
>
  <hmv-layout>
    <hmv-header />
  </hmv-layout>
</ng-component>
`;

exports[`LayoutComponent should display the host component title 1`] = `
<ng-component
  __ngContext__={[Function LRootView]}
  title={[Function String]}
>
  <hmv-layout>
    <hmv-header />
    <main>
      Custom HostComponent
    </main>
  </hmv-layout>
</ng-component>
`;
